css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300&display=swap');

* {
  margin: 0;
  padding: 0;
  border: none;
}

body {
  font-family: Montserrat, sans-serif;
}

/* heading and logo design */

.logo {
  float: left;
  font-family: Bebas Neue, sans-serif;
  color: orange;
  letter-spacing: 5px;
  font-size: 50px;
  padding-left: 20px;
}

/* nav bar design */

.menu {
  list-style-type: none;
  position: fixed;
  width: 100%;
  background-color: #fff;
  padding: 10px 0 10px 0;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

li {
  float: right;
  display: flex;
  justify-content: space-evenly;
  text-align: center;
  padding: 16px 35px;
  text-decoration: none;
  font-size: large;
  font-weight: bold;
}

li a {
  color: orangered;
}

/* hero image */

#hero-image {
  height: 600px;
  width: 100%;
  background: url(../css/images/hero-image-spanish.jpg) no-repeat center center;
  background-size: cover;
}

/* about section */

.about-spanish h2 {
  margin-top: 30px;
  color: orange;
  text-align: center;
  letter-spacing: 5px;
  font-family: Bebas Neue, sans-serif;
  font-size: 40px;
}

.about-spanish p {
  color: orangered;
  text-align: center;
  margin: 0 70px 0 70px;
}

/* images getting started */

.column {
  margin: auto;
  justify-content: center;
  display: flex;
  width: 100%;
  padding: 5px;
}

.row {
  display: flex;
  justify-content: center;
} 

/* recommended links */

#recommended-links {
  text-decoration: underline;
  display: flex;
  justify-content: center;
}

/* footer and social media */

footer ul {
  display: flex;
  justify-content: space-around;
  margin: 30px 0 30px 0;
}

i {
  font-size: 200%;
}

/* contact page */

/* contact page hero image */

#contact-image {
  height: 600px;
  width: 100%;
  background: url(../css/images/contact-us-hero-image.jpg) no-repeat center center;
  background-size: cover;
}

/* contact address */

.contact-page h3 {
  display: flex;
  justify-content: center;
  color: orangered;
  font-weight: bolder;
  text-decoration: underline;
  padding: 15px 0 15px 0;
}

/* map */

#map-wrapper {
  height: 400px;
  margin: 50px 0 -60px 0;
}

/* sign-up form */

#sign-up-image {
  height: 600px;
  width: 100%;
  background: url(../css/images/sign-up-photo.jpeg) no-repeat center center;
  background-size: cover;
}

.container {
  padding: 16px;
}

label {
  margin: 0 0 0 70px;
  font-weight: bold;
  color: orangered;
}

input {
  width: 90%;
  padding: 15px;
  margin: 5px 60px 22px 60px;
  display: flex;
  justify-content: center;
  text-align: left;
  border: none;
  background: #f1f1f1;
  border-radius: 8px;
}

.submit {
  background-color: orangered;
  color: white;
  font-weight: bold;
  font-size: large;
  display: flex;
  justify-content: center;
  margin: auto;
  padding: 25px;
  border-radius: 8px;
}

/* media query */

/* for screens 1024px and lower */

@media screen and (max-width: 1024px) {

  /* nav bar */

  .logo {
    letter-spacing: 0px;
  }

  .menu li {
    padding: 16px 10px;
  }

  /* about page */

  #hero-image {
    width: 100%;
  }

  /* sign up page */

  input {
    margin: 0 auto;
  }

  .submit {
    margin-top: 20px;
  }
}

@media screen and (max-width: 768px) {

  /* about page */

  .logo {
    padding: 5px 0 0 10px;
    font-size: 30px;
  }

  .menu li {
    padding: 16px 16px;
    display: block;
    flex-direction: row;
    text-align: left;
    font-size: small;
    clear: left;
    float: inline-start;
  }

  /* contact page */

  #contact-image {
    display: flex;
    width: 100%;
    background-size: cover;
  }

  /* sign up */

  label {
    margin: 0 0 0 35px;
  }
}

@media screen and (max-width: 500px) {

  /* nav bar */

  .logo {
    display: flex;
    margin-left: 115px;
  }

  .menu ul {
    display: inline-block;
    margin-left: 130px;
  }

  /* contact page */

  #contact-image {
    background-size: contain;
  }

  /* sign up form */

  label {
    margin: 0 0 0 5px;
  }
}

@media screen and (max-width: 375px) {

  /* nav bar */

  .logo {
    display: flex;
    margin-left: 50px;
  }

  .menu ul {
    display: inline-block;
    margin-left: 65px;
  }

  #recommended-links a {
    font-size: smaller;
  }
}

@media screen and (max-width: 320px) {

  /* nav bar */

  .logo {
    margin-left: 15px;
  }

  .menu ul {
    margin-left: 40px;
  }

  /* about spanish page */

  .about-spanish h2 {
    font-size: 25px;
  }

  .about-spanish p {
    font-size: small;
  }

  #recommended-links a {
    font-size: 8px;
  }

  footer i {
    font-size: 120%;
  }

  /* contact page */

  h3 {
    font-size: medium;
  }

  label {
    font-size: small;
  }

  /* sign up page */

  .submit {
    padding: 15px;
    font-size: medium;
  }

}

